[package]
name = "api_demo"
version = "0.0.3"
edition = "2021"
rust-version = "1.69"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
depthai-viewer = { workspace = true, features = ["web_viewer"] }

anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
glam = "0.22"
itertools = "0.10"
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
