[package]
name = "objectron"
version = "0.7.0-alpha.0"
edition = "2021"
rust-version = "1.69"
license = "MIT OR Apache-2.0"
publish = false


[dependencies]
depthai-viewer = { workspace = true, features = ["web_viewer",
  "native_viewer",
] }

anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
glam = "0.22"
prost = "0.11"


[build-dependencies]
prost-build = "0.11"
